--- a/gharjwai.css
+++ b/gharjwai.css
@@ -17,6 +17,7 @@ body{
 #poster{
     position: relative;
     box-shadow: 0 0 40px;
+    height:90vh
     
 
 }
@@ -144,7 +145,7 @@ details{
     } 
     #poster{
         width: 90vw;
-        height: 100vh;
+        height: 60vh;
         margin: 2vh 5vw 2vh;
     }
     #title{
