--- a/detail.css
+++ b/detail.css
@@ -24,6 +24,8 @@ body{
 img{
     width: 100%;
     height: 100%;
+    animation-name: poster;
+    animation-duration: 1s;
 }
 #btnbox{
     position: absolute;
@@ -47,6 +49,8 @@ button:hover{
 }
 #details{
     padding: 5%;
+    animation-name: poster;
+    animation-duration: 1s;
 }
 #title{
     font-size: 5vw;
