--- a/index.css
+++ b/index.css
@@ -112,6 +112,8 @@ body{
     color: #ffd662ff;
     border: 1px solid #003366;
     border-radius: 2px;
+    animation-name: poster;
+    animation-duration: 1s;
 }
 .searchbox::placeholder{
     color: #ffd662ff;
