--- a/index.css
+++ b/index.css
@@ -30,6 +30,7 @@ body{
     padding: 2vw;
     animation-name: poster;
     animation-duration: 1s;
+    transition: ease;
 }
 #category{
     margin-bottom: 20%;
@@ -114,6 +115,7 @@ body{
     border-radius: 2px;
     animation-name: poster;
     animation-duration: 1s;
+    transition: ease;
 }
 .searchbox::placeholder{
     color: #ffd662ff;
@@ -134,6 +136,7 @@ img{
     cursor: pointer;
     animation-name: poster;
     animation-duration: 2s;
+    transition: ease;
 }
 img:hover{
     box-shadow: 0 0 20px;
