--- a/detail.css
+++ b/detail.css
@@ -16,6 +16,9 @@ body{
     text-align: center;
     padding: 2%;
 }
+a:hover{
+    box-shadow: 0 0 20px;
+}
 #poster,.parts{
     width: 100%;
     height: 100%;
