--- a/detail.css
+++ b/detail.css
@@ -1,6 +1,8 @@
 body{
     margin: 0;
     padding: 0;
+    background-color: #ffd662ff;
+    color: #003366;
     font-family: "Ubuntu", sans-serif;
 }
 #content{
