--- a/index.css
+++ b/index.css
@@ -57,7 +57,7 @@ button:hover{
     border-radius: 5px;
     padding: 1%
 }
-.searchbtn{
+.mailbtn{
     background-color: #ffd662ff;
     color: #003366;
     border: 1px solid #ffd662ff;
